프로젝트 게시판 생성 페이지 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,10 @@ spring:
     username: root
     password: dbit
     driver-class-name: org.mariadb.jdbc.Driver
-
+  servlet:
+    multipart:
+      max-file-size: 50MB     # 개별 파일(또는 폼 필드)의 최대 허용 크기
+      max-request-size: 50MB   # 전체 요청(파일 + 나머지)의 최대 허용 크기
   jpa:
     hibernate:
       ddl-auto: update
@@ -16,3 +19,6 @@ spring:
   mybatis:
     configuration:
       map-underscore-to-camel-case: true
+server:
+  tomcat:
+    max-http-post-size: 52428800
