--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,5 +20,6 @@ spring:
     configuration:
       map-underscore-to-camel-case: true
 server:
+  port: 20080
   tomcat:
     max-http-post-size: 52428800
